--- a/css/main.css
+++ b/css/main.css
@@ -18,10 +18,11 @@ nav{
     width: 200px;
     color: #fff;
     padding: 15px;
+    font-size: 18px;
 }
 .nav-logo-box img{
-    width: 150px;
-    height: 150px;
+    width: 100px;
+    height: 100px;
 }
 
 .nav-text-box{
@@ -36,17 +37,18 @@ nav{
 }
 
 .nav-text-box .p1{
-    font-size: 25px;
+    font-size: 22px;
     font-weight: 400;
 }
 
 .nav-text-box .p2{
-    font-size: 25px;
+    text-transform: uppercase;
+    font-size: 22px;
     font-weight: 600;
 }
 
 .nav-text-box .p3{
-    font-size: 25px;
+    font-size: 22px;
     font-weight: 400;
 }
 
@@ -56,8 +58,8 @@ nav{
 .nav-btn-box button{
     background: none;
     padding: 5px 45px;
-    border: 3px solid #fff;
-    font-size: 25px;
+    border: 2px solid #fff;
+    font-size: 22px;
     border-radius: 6px;
     color: #fff;
     font-weight: 500;
@@ -108,4 +110,86 @@ nav{
     width: auto;
     transform: translate(580px, 15px);
     font-size: 18px !important;
+}
+
+
+
+/*******************************************************/
+.cont-footer{
+    background: #1B6EC0;
+}
+
+footer{
+    width: 100%;
+    height: auto;
+}
+
+.footer-row{
+    height: 200px;
+}
+.footer-col{
+    padding: 20px ;
+    display: flex;
+}
+.footer-col img{
+    width: 100px;
+    height: 100px;
+    margin-top: 30px;
+}
+.footer-col p{
+    font-size: 16px;
+    font-weight: 600;
+    text-transform: uppercase;
+    margin-top: 40px;
+    color: #fff;
+    margin-left: 10px;
+    /* border: 1px solid red; */
+}
+
+.info{
+    padding: 20px;
+    position: relative;
+}
+.info .title-info{
+    text-transform: uppercase;
+    color: #fff;
+    font-size: 15px !important;
+    padding-bottom: 5px !important;
+    border-bottom: 2px solid #2FCE77;
+}
+.line{
+    width: 100%;
+    height: 2px;
+    margin: 5px;
+}
+
+.info span{
+    color: #fff;
+    font-size: 13px !important;
+    font-weight: 200;
+    margin-top: 20px;
+}
+.title-span{
+    margin-left: 35px;
+
+}
+.link{
+    text-decoration: none !important;
+    position: relative;
+}
+.link span{
+    margin-left: 35px;
+}
+.img-icon{
+    position: absolute;
+    width: 20px !important;
+    height: 20px !important;
+    left: 0;
+    top: -25px;
+}
+.img-icon-2{
+    width: 20px !important;
+    height: 20px !important;
+    margin: 10px 0!important;
+    margin-right: 40px !important;
 }
