--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,9 @@
  padding: 0;
  box-sizing: border-box;   
 }
+body{
+    background: #e0e0e0 !important;
+}
 
 nav{
     background: #1B6EC0;
@@ -192,4 +195,184 @@ footer{
     height: 20px !important;
     margin: 10px 0!important;
     margin-right: 40px !important;
+}
+
+
+
+.box-login{
+    box-shadow: 0 0 10px #bdbcbc;
+    width: 600px;
+    margin: 50px auto;
+    height: 500px;
+    text-align: center;
+    color: #093663;
+    border-radius: 30px;
+    background: #fff;
+}
+.box-login p{
+    font-size: 28px;
+    font-weight: 600;
+    padding: 20px;
+    width: 350px;
+    margin: auto;
+    letter-spacing: 2px;
+}
+
+.box-input{
+    position: relative;
+    margin: 25px;
+    margin-left: 100px;
+    width: 409px;
+    height: 100%;
+    border-radius: 6px;
+    border: 1px solid #1400FF;
+    box-shadow: 0 10px 15px rgb(179, 179, 179);
+}
+
+.box-input span{
+    position: absolute;
+    background: #fff;
+    left: 10px;
+    font-size: 18px;
+    top: -15px;
+}
+.box-input input{
+    border: none;
+    outline: none;
+    width: 406px;
+    height: 45px;
+    padding-left: 8px;
+    letter-spacing: 1px;
+    border-radius: 6px;
+    background: #fff;
+
+}
+
+.login-btn{
+    width: 405px;
+    padding: 1px;
+    border: 1px solid #1400FF;
+    border-radius: 6px;
+    margin-left: 10px;
+    box-shadow: 0 10px 20px rgb(179, 179, 179);
+
+}
+
+.login-btn span{
+    background: #fff;
+    display: block;
+    padding: 10px;
+    border-radius: 6px;
+}
+center h6{
+    color: #FF000F;
+    margin-top: 50px;
+}
+
+
+.box-success{
+    box-shadow: 0 0 10px #bdbcbc;
+    width: 600px;
+    margin: 50px auto;
+    height: 550px;
+    text-align: center;
+    color: #093663;
+    border-radius: 30px;
+    background: #fff;
+}
+
+
+.box-success img{
+    margin: 50px auto;
+}
+.box-success .succes-text1{
+    color: #2FCE77;
+    font-size: 44px;
+    font-weight: 600;
+}
+.box-success .succes-text2{
+    display: inline-block;
+    color: #2FCE77;
+    font-size: 44px;
+    font-weight: 600;
+    margin-top: -13px;
+}
+
+.box-success a{
+    text-decoration: none;
+    color: #FF000F;
+    font-size: 18px;
+}
+
+.box-detail1{
+    box-shadow: 0 0 10px #bdbcbc;
+    width: 100%;
+    margin: 20px auto;
+    height: 100px;
+    text-align: center;
+    color: #093663;
+    border-radius: 20px;
+    background: #fff;
+    display: flex;
+    justify-content: center;
+}
+.box-detail1 p{
+    color: #093663;
+    align-content:center ;
+    font-size: 32px;
+    font-weight: 500;
+}
+
+.box-detail2{
+    width: 100%;
+    margin: 10px auto;
+    text-align: center;
+    color: #093663;
+    border-radius: 20px;
+    background: #fff;
+    box-shadow: 0 0 10px #bdbcbc;
+    margin-bottom: 20px;
+    padding: 10px;
+}
+
+.table th, td {
+    color: #093663 !important;
+    font-size: 18px !important;
+}
+
+
+.box-detail_in-1{
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    padding: 30px;
+    margin: 20px auto;
+    text-align: center;
+    color: #093663;
+    border-radius: 20px;
+    background: #fff;
+    box-shadow: 0 0 10px #bdbcbc;
+}
+
+
+.user-text{
+    margin: 20px !important;
+    width: 500px;
+    border-bottom: 1px solid #093663;
+    display: flex !important;
+    justify-content: space-between;
+    margin: 5px 0;
+}
+.user-text .user-profile{
+    margin-left: 50px;
+}
+
+.box-detail_in-2{
+    width: 100%;
+    padding: 30px;
+    margin: 20px auto;
+    color: #093663;
+    border-radius: 20px;
+    background: #fff;
+    box-shadow: 0 0 10px #bdbcbc;
 }
