--- a/templates/base.html
+++ b/templates/base.html
@@ -25,8 +25,13 @@
                 </div>
     
                 <div class="nav-btn-box">
-                  <a href='#'>Kirish</a>
+                  {% if user.is_authenticated %}
+                    <a href="{% url 'logout' %}">Chiqish</a>
+                  {% else %}
+                    <a href="{% url 'login' %}">Kirish</a>
+                  {% endif %}
                 </div>
+                
                 
             </div>
         </nav>
