--- a/templates/detail.html
+++ b/templates/detail.html
@@ -1,199 +1,61 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Login page</title>
-    <link rel="stylesheet" href="./css/main.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  </head>
-  <body>
-    
-    <!-- Navbar start -->
-    
-    <nav>
-        <div class="container d-flex justify-content-between">
-            <div class="nav-logo-box">
-              <a href="#"><img src="./img/jizpi-logo.png" alt="rektor.jizpi.uz"></a>
-              <h3>JIZZAX POLITEXNIKA INSTITUTI</h3>
-            </div>
+{% extends "base.html" %}
+{% load static %}
+{% block content %}
 
-            <div class="nav-text-box">
-              <span class="p1">Jizzax Politexnika Instituti Rektori</span>
-              <span class="p2">USMANQULOV ALISHER QODIRQULOVICHNING</span>
-              <span class="p3">Virtual qabulxonasi</span>
-            </div>
-
-            <div class="nav-btn-box">
-              <button>Kirish</button>
-            </div>
-            
-        </div>
-    </nav>
-
-
-    <!-- Navbar end -->
-    
     <section class="main mb-5">
       <div class="container">
-        
-        <div class="box-detail1">
-           <p>Shaxslar tomonidan yuborilgan A’riza shikoyat taklif va hokazolar ro’yhati</p>
-        </div>
-        
-        <div class="box-detail2">
-            <table class="table">
-                <thead>
-                  <tr>
-                    <th scope="col">#</th>
-                    <th scope="col">Ism:</th>
-                    <th scope="col">Viloyat:</th>
-                    <th scope="col">Tell-raqam:</th>
-                    <th scope="col">Murojat turi:</th>
-                  </tr>
-                </thead>
-                <tbody>
-
-                <!-- keraklisi shu -->
-
-                <tr>
-                    <th scope="row">1</th>
-                    <td><a href="#">Samandar</a></td>
-                    <td>Jizzax</td>
-                    <td>905387869</td>
-                    <td>A'riza</td>
-                </tr>
-
-                  <!-- keraklisi shu -->
-                  
-                  
-                  
-                  
-                  
-                  <!-- qolgani nusxalar -->
-                  <!-- qolgani nusxalar -->
-                  <!-- qolgani nusxalar -->
-                  <!-- qolgani nusxalar -->
-                  <!-- qolgani nusxalar -->
-                  
-                  
-                  
-                  <tr>
-                    <th scope="row">1</th>
-                    <td><a href="#">Samandar</a></td>
-                    <td>Jizzax</td>
-                    <td>905387869</td>
-                    <td>A'riza</td>
-                  </tr>
-                  <tr>
-
-                  <tr>
-                    <th scope="row">1</th>
-                    <td><a href="#">Samandar</a></td>
-                    <td>Jizzax</td>
-                    <td>905387869</td>
-                    <td>A'riza</td>
-                  </tr>
-                  <tr>
-                    <th scope="row">1</th>
-                    <td><a href="#">Samandar</a></td>
-                    <td>Jizzax</td>
-                    <td>905387869</td>
-                    <td>A'riza</td>
-                  </tr>
-                  <tr>
-
-                  <tr>
-                    <th scope="row">1</th>
-                    <td><a href="#">Samandar</a></td>
-                    <td>Jizzax</td>
-                    <td>905387869</td>
-                    <td>A'riza</td>
-                  </tr>
-                  <tr>
-                    <th scope="row">1</th>
-                    <td><a href="#">Samandar</a></td>
-                    <td>Jizzax</td>
-                    <td>905387869</td>
-                    <td>A'riza</td>
-                  </tr>
-                  <tr>
-
-                  <tr>
-                    <th scope="row">1</th>
-                    <td><a href="#">Samandar</a></td>
-                    <td>Jizzax</td>
-                    <td>905387869</td>
-                    <td>A'riza</td>
-                  </tr>
-                  <tr>
-                    <th scope="row">1</th>
-                    <td><a href="#">Samandar</a></td>
-                    <td>Jizzax</td>
-                    <td>905387869</td>
-                    <td>A'riza</td>
-                  </tr>
-                  <tr>
-                    
-    
-                </tbody>
-              </table>
+        <a href="{% url "list" %}" class="btn btn-outline-danger mt-4 w100">Orqaga</a>
+        <div class="box-detail_in-1">
             
+          <div class="box-detail-left">
+            <div class=" user-text">
+              <h5 class="ml-5">Ism:</h5>
+              <h5 class="user-profile">{{ post.name }}</h5>
+          </div>
+
+          <div class=" user-text">
+              <h5 class="ml-5">Familiya:</h5>
+              <h5 class="user-profile">{{ post.username }}</h5>
+          </div>
+          <div class=" user-text">
+              <h5 class="ml-5">Tell-raqami::</h5>
+              <h5 class="user-profile">{{ post.tel_number }}</h5>
+          </div>
+
+          <div class=" user-text">
+              <h5 class="ml-5">Email:</h5>
+              <h5 class="user-profile">{{ post.email }}</h5>
+          </div>
+          </div>
+            
+          <div class="box-detail-right">
+            <div class=" user-text">
+              <h5 class="ml-5">Viloyati:</h5>
+              <h5 class="user-profile">{{ post.region }}</h5>
+          </div>
+
+          <div class=" user-text">
+              <h5 class="ml-5">Jinsi:</h5>
+              <h5 class="user-profile">{{ post.gender }}</h5>
+          </div>
+          <div class=" user-text">
+              <h5 class="ml-5">Murojaat Turi:</h5>
+              <h5 class="user-profile">{{ post.application_type }}</h5>
+          </div>
+
+          <div class=" user-text">
+              <h5 class="ml-5">Manzil:</h5>
+              <h5 class="user-profile">{{ post.address }} </h5>
+          </div>
+          </div>
+
+        </div>
+        
+        <div class="box-detail_in-2">
+          <h5>{{ post.body }}</h5>
         </div>
 
       </div>
     </section>
     
-
-    <!-- Footer -->
-  
-
-    <section>
-      <div class="container-fluid cont-footer">
-          <div class="container ">
-              <footer>
-                  <div class="row footer-row">
-                      <div class="col footer-col">
-                          <img class="jizpi-logo" src="./img/jizpi-logo.png" alt="">
-                          <p>
-                              <span>Jizax</span><br>
-                              <span>Politexnika</span><br>
-                              <span>Instituti</span>
-                          </p>
-                      </div>
-                      <div class="col footer-col">
-                        <div class="info">
-                          <span class="title-info">biz bilan bog'lanish</span>
-                          <div class="line"></div>
-                          <span class="title-span">info@jizpi.uz</span><br>
-                          <a class="link" href="#"><img class="img-icon" src="./img/phone-call.png" alt=""><span>+998 72 226 46 05</span></a><br>
-                          <a class="link" href="#"><img class="img-icon" src="./img/marker.png" alt=""><span>Jizzax Islom Karimov Shoh ko‘chasi 4 uy</span></a>
-                        </div>
-                      </div>
-                      <div class="col footer-col">
-                          <div class="info">
-                              <span class="title-info">Bizni ijtimoiy tarmoqlarda kuzating!</span>
-                              <div class="line"></div>
-                              <div class="icon-box">
-                                  <a class="link-icon" href="#"><img class="img-icon-2" src="./img/twitter.png" alt=""></a>
-                                  <a class="link-icon" href="#"><img class="img-icon-2" src="./img/facebook.png" alt=""></a>
-                                  <a class="link-icon" href="#"><img class="img-icon-2" src="./img/telegram.png" alt=""></a>
-                                  <a class="link-icon" href="#"><img class="img-icon-2" src="./img/instagram.png" alt=""></a>
-                              </div>
-
-                          </div>
-                      </div>
-                  </div>
-              </footer>
-          </div>
-          
-      </div>
-    </section>
-
-    <!-- Footer end -->
-
-
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-  </body>
-</html>
+{% endblock content %}
