--- a/templates/success.html
+++ b/templates/success.html
@@ -1,110 +1,28 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Login page</title>
-    <link rel="stylesheet" href="./css/main.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  </head>
-  <body>
-    
-    <!-- Navbar start -->
-    
-    <nav>
-        <div class="container d-flex justify-content-between">
-            <div class="nav-logo-box">
-              <a href="#"><img src="./img/jizpi-logo.png" alt="rektor.jizpi.uz"></a>
-              <h3>JIZZAX POLITEXNIKA INSTITUTI</h3>
-            </div>
-
-            <div class="nav-text-box">
-              <span class="p1">Jizzax Politexnika Instituti Rektori</span>
-              <span class="p2">USMANQULOV ALISHER QODIRQULOVICHNING</span>
-              <span class="p3">Virtual qabulxonasi</span>
-            </div>
-
-            <div class="nav-btn-box">
-              <button>Kirish</button>
-            </div>
-            
-        </div>
-    </nav>
+{% extends "base.html" %}
+{% load static %}
+{% block content %}
 
 
-    <!-- Navbar end -->
-    
-    <section class="main mb-5">
-      <div class="container">
-        
-        <div class="box-success">
-            
-            <div class="img-box">
-                <img src="./img/success.png" alt="">
-            </div>
-            
-            <span class="succes-text1">So’rov</span><br>
-            <span class="succes-text2">Muaffaqiyatli yuborildi</span>
-            
-            <center>
-                <h6><a href="#">Orqaga qaytish</a></h6>
-            </center>
-        </div>
-        
+<section class="main mb-5">
+  <div class="container"> 
 
-      </div>
-    </section>
-    
-
-    <!-- Footer -->
-  
-
-    <section>
-      <div class="container-fluid cont-footer">
-          <div class="container ">
-              <footer>
-                  <div class="row footer-row">
-                      <div class="col footer-col">
-                          <img class="jizpi-logo" src="./img/jizpi-logo.png" alt="">
-                          <p>
-                              <span>Jizax</span><br>
-                              <span>Politexnika</span><br>
-                              <span>Instituti</span>
-                          </p>
-                      </div>
-                      <div class="col footer-col">
-                        <div class="info">
-                          <span class="title-info">biz bilan bog'lanish</span>
-                          <div class="line"></div>
-                          <span class="title-span">info@jizpi.uz</span><br>
-                          <a class="link" href="#"><img class="img-icon" src="./img/phone-call.png" alt=""><span>+998 72 226 46 05</span></a><br>
-                          <a class="link" href="#"><img class="img-icon" src="./img/marker.png" alt=""><span>Jizzax Islom Karimov Shoh ko‘chasi 4 uy</span></a>
-                        </div>
-                      </div>
-                      <div class="col footer-col">
-                          <div class="info">
-                              <span class="title-info">Bizni ijtimoiy tarmoqlarda kuzating!</span>
-                              <div class="line"></div>
-                              <div class="icon-box">
-                                  <a class="link-icon" href="#"><img class="img-icon-2" src="./img/twitter.png" alt=""></a>
-                                  <a class="link-icon" href="#"><img class="img-icon-2" src="./img/facebook.png" alt=""></a>
-                                  <a class="link-icon" href="#"><img class="img-icon-2" src="./img/telegram.png" alt=""></a>
-                                  <a class="link-icon" href="#"><img class="img-icon-2" src="./img/instagram.png" alt=""></a>
-                              </div>
-
-                          </div>
-                      </div>
-                  </div>
-              </footer>
+      <div class="box-success">
+          
+          <div class="img-box">
+              <img src="{% static 'img/success.png' %}" alt="">
           </div>
           
+          <span class="succes-text1">So’rov</span><br>
+          <span class="succes-text2">Muaffaqiyatli yuborildi</span>
+          
+          <center>
+              <h6><a href="{% url "index" %}">Orqaga qaytish</a></h6>
+          </center>
       </div>
-    </section>
+      
 
-    <!-- Footer end -->
+    </div>
+  </section>
+    
 
-
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-  </body>
-</html>
+{% endblock content %}   
